Fixed wrap issue in index and css.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,18 @@
+/* Mini reset */
 
+* { margin: 0;
+    padding: 0;
+}
+
+
+/* Styles */
 
 body {
     
     width: 100%;
     height: 100vh;
-    /* min-width: 800px; */
+    
     font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
     text-align: center;
     background-color: grey;
 }
@@ -22,7 +27,7 @@ header {
     color:aliceblue;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-size: 25px;
-    padding: 0px;
+    /* padding: 0px; */
 }
 
 .banner {
@@ -41,9 +46,8 @@ header {
 
 .menu-container {
     width: 100%;
-    z-index: 1;
-    /* stops the navbar disappearing behind the banner */
-    position: fixed;
+    z-index: 1; /* stops the navbar disappearing behind the banner */    
+    position: sticky;
     top: 0px;
 
     display: flex;
@@ -51,7 +55,6 @@ header {
     flex-wrap: wrap;
     align-items: center;
     
-
     background-color: aliceblue;
 
 }
@@ -65,20 +68,21 @@ header {
 .navbar {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
 
-    flex: 1 1 200px;
 }
 
 .navbar a {
     font-size: 16px;
     font-family: Arial, Helvetica, sans-serif;
     text-decoration: none;
-    margin: 0px 5px;
-    padding: 5px 10px;
+    margin-right: 5px;
+    margin-bottom: 5px;
+    padding: 3px 7px;
     border: 2px dashed purple;
     border-radius: 5px;
     color: indigo;
-    flex: 1 1 50px;
+    /* flex: 1 1 10px; */
 
 }
 
